[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["yousef aldabbas <yousef.aldabbas@ahli.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
sqlalchemy = "^2.0.10"
uvicorn = "^0.21.1"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
